Fixed padding on footer on narrow screens to give more space to content instead of space

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -7,6 +7,9 @@ footer{
 	border-bottom: 2px solid rgba(51,102,153,0.8);
 	background: #D6E0EA;
 	background: rgba(51,102,153,0.2);
+	@media (max-width:1000px){
+		padding: 0;
+	}
 
 	position: relative;
 		&:after{
